# kmacros

./: Cargo.toml  publish-all.fish
examples/: clearable.rs
kmacros_shim/: Cargo.toml
kmacros_shim/src/: clearable.rs  lib.rs
kproc_macros/: Cargo.toml  README.md
kproc_macros/src/: clearable.rs  field_iter.rs  lib.rs
kproc_macros/tests/: 01-explain.rs  02-field_iter.rs  03-clearable.rs  progress.rs
src/: clearable.rs  lib.rs
