[package]
name = "kmacros"
version = "4.0.0"
edition = "2021"
description = "Useful macros"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/norcalli/kmacros/"
repository = "https://github.com/norcalli/kmacros/"
keywords = []

[workspace]
members = ["kmacros_shim", "kproc_macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kproc_macros = { path = "kproc_macros", version = "4.0", optional = true }
kmacros_shim = { path = "kmacros_shim", version = "4.0" }

[features]
default = ["proc"]
proc = ["kproc_macros"]
no_std = ["kmacros_shim/no_std"]
