[package]
name = "kmacros"
version = "6.1.0"
edition = "2021"
description = "Useful macros"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/norcalli/kmacros/"
repository = "https://github.com/norcalli/kmacros/"
keywords = []

[workspace]
members = ["kmacros_shim", "kproc_macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kproc_macros = { path = "kproc_macros", version = "6.0", optional = true }
kmacros_shim = { path = "kmacros_shim", version = "6.0" }
enum-kinds = { version = "0.5.1", optional = true }

[features]
default = ["proc", "kinds"]
proc = ["kproc_macros"]
kinds = ["enum-kinds"]
no_std = ["kmacros_shim/no_std", "enum-kinds/no-stdlib"]
