[package]
name = "kmacros_shim"
version = "4.0.0"
edition = "2021"
license = "MIT"
description = "Useful macros"
homepage = "https://github.com/norcalli/kmacros/"
repository = "https://github.com/norcalli/kmacros/"
keywords = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = []
no_std = []
