[package]
name = "kproc_macros"
version = "1.0.0"
edition = "2021"
authors = ["Ashkan Kiani"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "1.0", features = ["full", "extra-traits"] }
kmacros_shim = { path = "../kmacros_shim", version = "1.0" }

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
