[package]
name = "kproc_macros"
version = "5.1.0"
edition = "2021"
authors = ["Ashkan Kiani"]
license = "MIT"
description = "Useful proc macros"
readme = "README.md"
homepage = "https://github.com/norcalli/kmacros/"
repository = "https://github.com/norcalli/kmacros/"
keywords = ["explain"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
kmacros_shim = { path = "../kmacros_shim", version = "5.1" }

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
kmacros =  { path = "../", version = "5.1" }
